--- a/src/pages/alert-example.mdx
+++ b/src/pages/alert-example.mdx
@@ -2,7 +2,7 @@
 title: "Alert Example"
 ---
 
-import Alert from "../components/alert"
+import Alert from "../components/osds/alert"
 
 <Alert alertType="success" alertMessage="This is an example of a success message."/>
 
