fix alerts example

--- a/src/pages/alerts.mdx
+++ b/src/pages/alerts.mdx
@@ -27,20 +27,20 @@ import Alert from "../components/osds/alert"
 import React from "react"
 
 function Alert(props) {
-  var alertIcon = (function (alert_type) {
-    switch (alertType) {
-      case "info":
-        return "fas fa-info-circle"
-      case "success":
-        return "fas fa-check-circle"
-      case "warning":
-        return "fas fa-exclamation-triangle"
-      case "danger":
-        return "fas fa-times-circle"
-      default:
-        return "no-icon"
+  var alertIcon = (function(alertType) {
+  switch(alertType) {
+    case 'info':
+      return 'fas fa-info-circle';
+    case 'success':
+      return 'fas fa-check-circle';
+    case 'warning':
+      return 'fas fa-exclamation-triangle';
+    case 'danger':
+      return 'fas fa-times-circle';
+    default:
+      return 'no-icon';
     }
-  })(props.alertType)
+  })(props.alertType);
 
   return (
     <div className={`osds-alert osds-alert--${props.alertType}`} role="alert">
