clean up quotes

--- a/src/pages/alerts.mdx
+++ b/src/pages/alerts.mdx
@@ -29,16 +29,16 @@ import React from "react"
 function Alert(props) {
   var alertIcon = (function(alertType) {
   switch(alertType) {
-    case 'info':
-      return 'fas fa-info-circle';
-    case 'success':
-      return 'fas fa-check-circle';
-    case 'warning':
-      return 'fas fa-exclamation-triangle';
-    case 'danger':
-      return 'fas fa-times-circle';
+    case "info":
+      return "fas fa-info-circle";
+    case "success":
+      return "fas fa-check-circle";
+    case "warning":
+      return "fas fa-exclamation-triangle";
+    case "danger":
+      return "fas fa-times-circle";
     default:
-      return 'no-icon';
+      return "no-icon";
     }
   })(props.alertType);
 
