redo how example page titles are done

--- a/src/pages/alerts.mdx
+++ b/src/pages/alerts.mdx
@@ -1,8 +1,6 @@
----
-title: "Alerts"
----
-
 import Alert from "../components/osds/alert"
+
+# Alerts
 
 <Alert alertType="info" alertMessage="This is an example of an info message." />
 
