--- a/src/pages/buttons.mdx
+++ b/src/pages/buttons.mdx
@@ -1,8 +1,6 @@
----
-title: "Buttons"
----
-
 import Button from "../components/osds/button"
+
+# Buttons
 
 <div class="osds-button-group">
   <Button buttonText="Primary Button" />
