add props for accordion heading level

--- a/src/pages/accordions.mdx
+++ b/src/pages/accordions.mdx
@@ -8,7 +8,7 @@ export const accordionData = [
   { id: 678, title: "Bird", content: "This is a bird." },
 ]
 
-<Accordion data-allow-multiple items={accordionData} />
+<Accordion headingLevel="h2" items={accordionData} data-allow-multiple />
 
 ## Component Source Code
 
