add h2.section-header style

--- a/src/pages/accordions.mdx
+++ b/src/pages/accordions.mdx
@@ -10,13 +10,13 @@ export const accordionData = [
 
 <Accordion headingLevel="h2" items={accordionData} data-allow-multiple />
 
-## Component Source Code
+<h2 class="section-header">Component Source Code</h2>
 
 ```js
 
 ```
 
-## Implementation
+<h2 class="section-header">Implementation</h2>
 
 ```js
 
