--- a/src/pages/alerts.mdx
+++ b/src/pages/alerts.mdx
@@ -19,7 +19,7 @@ import Alert from "../components/osds/alert"
   alertMessage="This is an example of a danger message."
 />
 
-## Component Source Code
+<h2 class="section-header">Component Source Code</h2>
 
 ```js
 import React from "react"
@@ -53,7 +53,7 @@ function Alert(props) {
 export default Alert
 ```
 
-## Implementation
+<h2 class="section-header">Implementation</h2>
 
 ```js
 <Alert
