--- a/src/pages/buttons.mdx
+++ b/src/pages/buttons.mdx
@@ -9,25 +9,23 @@ import Button from "../components/osds/button"
   <Button buttonType="outline-secondary" buttonText="Alt Secondary Button" />
 </div>
 
-## Component Source Code
+<h2 class="section-header">Component Source Code</h2>
 
 ```js
 import React from "react"
 
 function Button(props) {
   var classes = (function (buttonType) {
-    return (buttonType ? `osds-button osds-button--${buttonType}` : "osds-button");
-  })(props.buttonType);
+    return buttonType ? `osds-button osds-button--${buttonType}` : "osds-button"
+  })(props.buttonType)
 
-  return (
-    <button className={classes}>{props.buttonText}</button>
-  )
+  return <button className={classes}>{props.buttonText}</button>
 }
 
 export default Button
 ```
 
-## Implementation
+<h2 class="section-header">Implementation</h2>
 
 ```js
 <Button buttonType="secondary" buttonText="Secondary Button" />
