finish accordion example page

--- a/src/pages/accordions.mdx
+++ b/src/pages/accordions.mdx
@@ -17,11 +17,51 @@ export const accordionData = [
 <h2 class="section-header">Component Source Code</h2>
 
 ```js
+import React from "react"
 
+function Accordion(props) {
+  const Heading = props.headingLevel || "h3"
+  return (
+    <div className="osds-accordion">
+      {props.items.map(item => (
+        <React.Fragment key={item.id}>
+          <Heading className="osds-accordion__heading">
+            <button
+              id={`osds-accordion__trigger--${item.id}`}
+              className="osds-accordion__trigger"
+              aria-controls={`osds-accordion__panel--${item.id}`}
+              aria-expanded="false"
+            >
+              <span className="osds-accordion__icon" aria-hidden="true"></span>
+              <span className="osds-accordion__title">{item.title}</span>
+            </button>
+          </Heading>
+          <div
+            id={`osds-accordion__panel--${item.id}`}
+            className="osds-accordion__panel"
+            role="region"
+            aria-labelledby={`osds-accordion__trigger--${item.id}`}
+            hidden
+          >
+            {item.content}
+          </div>
+        </React.Fragment>
+      ))}
+    </div>
+  )
+}
+
+export default Accordion
 ```
 
 <h2 class="section-header">Implementation</h2>
 
 ```js
+export const accordionData = [
+  { id: 322, title: "Dog", content: "This is a dog." },
+  { id: 444, title: "Cat", content: "This is a cat." },
+  { id: 678, title: "Bird", content: "This is a bird." },
+]
 
+<Accordion headingLevel="h2" items={accordionData} data-allow-multiple />
 ```
