--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -8,6 +8,8 @@ import { Link } from "gatsby"
 
 This demo site is built with <a href="https://www.gatsbyjs.com/" target="_blank" rel="noreferrer" className="osds-link">Gatsby</a> to test the implementation of OSDS components. The stylesheet was added via the CDN and the markup was created via React Components.
 
+<h2 class="section-header">Components</h2>
+
 At this time the following components have example pages:
 
 <ul className="osds-list-ul">
@@ -27,3 +29,29 @@ At this time the following components have example pages:
     </Link>
   </li>
 </ul>
+
+<h2 class="section-header">Implementation</h2>
+
+There are many ways to implement OSDS into a Gatsby project. This demo site uses
+the following methods:
+
+CSS is implmented by importing the hosted CSS file into a global stylesheet for the project.
+
+```css
+@import url("https://assets.osu.edu/osds/v0.x/css/osds-styles.min.css");
+```
+
+<br />
+
+JS is implmented by importing the hosted JS file into the `gatsby-ssr.js` file
+for the project. This will place the script at the bottom of the `<body>` element.
+
+```js
+import React from "react"
+
+export const onRenderBody = ({ setPostBodyComponents }) => {
+  setPostBodyComponents([
+    <script src="https://assets.osu.edu/osds/v0.x/js/osds.min.js" />,
+  ])
+}
+```
