--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -35,7 +35,7 @@ At this time the following components have example pages:
 There are many ways to implement OSDS into a Gatsby project. This demo site uses
 the following methods:
 
-CSS is implmented by importing the hosted CSS file into a global stylesheet for the project.
+CSS is implemented by importing the hosted CSS file into a global stylesheet for the project.
 
 ```css
 @import url("https://assets.osu.edu/osds/v0.x/css/osds-styles.min.css");
@@ -43,7 +43,7 @@ CSS is implmented by importing the hosted CSS file into a global stylesheet for 
 
 <br />
 
-JS is implmented by importing the hosted JS file into the `gatsby-ssr.js` file
+JS is implemented by importing the hosted JS file into the `gatsby-ssr.js` file
 for the project. This will place the script at the bottom of the `<body>` element.
 
 ```js
